falta ajustar a rota para procurar img